# thesis-onetake

./: .cursorignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
OneTake-back-end/: .dockerignore  .editorconfig  .gitignore  OneTake-back-end.slnx  README.md  coverlet.runsettings
OneTake-back-end/OneTake.Application/: DependencyInjection.cs  OneTake.Application.csproj
OneTake-back-end/OneTake.GrpcContracts/: OneTake.GrpcContracts.csproj
OneTake-back-end/OneTake.Infrastructure/: DependencyInjection.cs  OneTake.Infrastructure.csproj
OneTakeAnalytics/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
OneTakeAnalytics/docker/: Dockerfile.analytics_ingest  Dockerfile.reco_service
OneTakeAnalytics/jobs/aggregates/: __init__.py  refresh_aggregates.py
OneTakeAnalytics/libs/onetake_analytics_model/: __init__.py
OneTakeAnalytics/libs/onetake_common/: __init__.py
OneTakeAnalytics/libs/onetake_proto/: __init__.py
OneTakeAnalytics/libs/onetake_proto/analytics/v1/: __init__.py  analytics_pb2.py  analytics_pb2_grpc.py
OneTakeAnalytics/libs/onetake_proto/onetake/: __init__.py
OneTakeAnalytics/libs/onetake_proto/onetake/analytics/: __init__.py
OneTakeAnalytics/libs/onetake_proto/onetake/analytics/v1/: __init__.py
OneTakeAnalytics/libs/onetake_proto/onetake/reco/v1/: __init__.py
OneTakeAnalytics/libs/onetake_proto/reco/: __init__.py
OneTakeAnalytics/libs/onetake_proto/reco/v1/: __init__.py  reco_pb2.py  reco_pb2_grpc.py
OneTakeAnalytics/scripts/: generate_proto.py
OneTakeAnalytics/services/analytics_ingest/: __init__.py  batch_buffer.py  clickhouse_writer.py  config.py  main.py  server.py
OneTakeAnalytics/services/reco_service/: __init__.py  cache.py  config.py  main.py  personalize.py  server.py  similar_by_tags.py  trending.py
OneTakeAnalytics/tests/: test_placeholder.py  test_reco_cache.py  test_similar_by_tags.py  test_trending.py
contracts/: README.md
docs/: frontend-screen-migration-note.md  frontend-ui-audit.md
onetake-front-end/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: reset-docker.ps1
(+282 files in other folders)
