[project]
name = "onetake-analytics"
version = "0.1.0"
description = "OneTake Analytics and Recommendations (gRPC services, ClickHouse)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "clickhouse-driver>=0.2.6",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.11",
    "types-requests>=2.32.0.20250328",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "libs/onetake_common",
    "libs/onetake_proto",
    "libs/onetake_analytics_model",
    "services/analytics_ingest",
    "services/reco_service",
]

[tool.hatch.build.targets.sdist]
include = [
    "libs",
    "services",
    "contracts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=services --cov=libs --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
packages = ["services", "libs", "tests"]
